#157:ダイアログのデザインを修正

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="rect4"></div>
         <div class="rect5"></div>
       </div>
-      <p>Loading Now...</p>
+      <p>Now Loading...</p>
     </div>
     <!--Scriptの読み込み -->
     <script type="text/javascript" src="./tyrano/libs/jquery-3.4.1.min.js"></script>
@@ -87,8 +87,8 @@
       <h1 class="remodal_title"></h1>
       <p class="remodal_txt"></p>
       <br>
-      <button data-remodal-action="cancel" class="remodal-cancel">キャンセル</button>
-      <button data-remodal-action="confirm" class="remodal-confirm">OK</button>
+      <button data-remodal-action="confirm" class="remodal-confirm"></button>
+      <button data-remodal-action="cancel" class="remodal-cancel"></button>
     </div>
   </body>
 </html>
