--- a/data/others/plugin/theme_kopanda_bth_06_blue/html/menu.html
+++ b/data/others/plugin/theme_kopanda_bth_06_blue/html/menu.html
@@ -1,33 +1,42 @@
 <div class="display_menu block_menu" align="center">
-
 	<div class='menu_item menu_close' style='float:left;margin:0;position:absolute;left:20px;top:600px'>
 		<img src='data/others/plugin/theme_kopanda_bth_06_blue/image/system/menu_button_close.png' />
 	</div>
-	
+
 	<div style='clear:both'></div>
 
 	<div>
-
+		<!-- Item -->
+		<div class="menu_item menu_itemMenu">
+			<a href="javascript:void(0)" onclick="myobj.item();">
+				<img src="data/others/plugin/theme_kopanda_bth_06_blue/image/system/menu_button_item.png" />
+			</a>
+		</div>
+		<!-- Save -->
 		<div class="menu_item menu_save">
 			<a href="javascript:void(0)"><img src="data/others/plugin/theme_kopanda_bth_06_blue/image/system/menu_button_save.png" /></a>
 		</div>
-
+		<!-- Load -->
 		<div class="menu_item menu_load">
 			<a href="javascript:void(0)"><img src="data/others/plugin/theme_kopanda_bth_06_blue/image/system/menu_button_load.png" /></a>
 		</div>
-
+		<!-- Config -->
 		<div class="menu_item menu_config">
 			<a href="javascript:void(0)" onclick="myobj.config();">
 				<img src="data/others/plugin/theme_kopanda_bth_06_blue/image/system/menu_button_config.png" />
 			</a>
 		</div>
-
-		<div class="menu_item menu_back_title">
-			<a href="javascript:void(0)"><img src="data/others/plugin/theme_kopanda_bth_06_blue/image/system/menu_button_title.png" /></a>
+		<!-- Extra -->
+		<div class="menu_item menu_extra">
+			<a href="javascript:void(0)" onclick="myobj.extra();">
+				<img src="data/others/plugin/theme_kopanda_bth_06_blue/image/system/menu_button_extra.png" />
+			</a>
 		</div>
-
+		<div class="menu_item menu_back_title">
+			<a href="javascript:voi
+			d(0)"><img src="data/others/plugin/theme_kopanda_bth_06_blue/image/system/menu_button_title.png" /></a>
+		</div>
 	</div>
-
 </div>
 
 <img src='data/others/plugin/theme_kopanda_bth_06_blue/image/system/menu_bg.png' style='z-index:-1;left:0;top:0;width:100%;height:100%;position:absolute;'>
