--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./tyrano/libs/remodal/remodal-default-theme.css">
     <link href="./tyrano/libs/textillate/assets/animate.css" rel="stylesheet">
     <!-- ローディング -->
-    <link href="./tyrano/loading.css" rel="stylesheet">
+    <link href="./data/others/css/loading.css" rel="stylesheet">
   </head>
 
   <body onselectstart="return false" onContextmenu="return false" ontouchmove="event.preventDefault()" >
