--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Loading TyranoScript</title>
+    <title>ユニゾンまであと3ヘルツ</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="robots" content="noindex,nofollow" />
@@ -19,7 +19,7 @@
   </head>
 
   <body onselectstart="return false" onContextmenu="return false" ontouchmove="event.preventDefault()" >
-    <!--ローディングアニメーションを実行 -->
+    <!-- ローディングアニメーションを実行 -->
     <div class="loadingWrap">
       <div class="spinner">
         <div class="rect1"></div>
@@ -30,7 +30,7 @@
       </div>
       <p>Now Loading...</p>
     </div>
-    <!--Scriptの読み込み -->
+    <!-- Scriptの読み込み -->
     <script type="text/javascript" src="./tyrano/libs/jquery-3.4.1.min.js"></script>
     <script>
       try {
@@ -77,10 +77,9 @@
       function doScroll() { if (window.pageYOffset === 0) { window.scrollTo(0,1); } }  
       window.onload = function() { setTimeout(doScroll, 100); }  
     </script>
-    <!--シナリオファイルの読み込み-->>
+    <!-- シナリオファイルの読み込み -->>
     <div id="tyrano_base" class="tyrano_base" style="overflow:hidden" unselectable="on" ondragstart="return false" ></div>
     <div id="vchat_base" class="vchat_base" style="overflow:hidden" unselectable="on" ondragstart="return false" ></div>
-    
     <!-- モーダル用 -->
     <div class="remodal-bg"></div>
     <div class="remodal" data-remodal-id="modal" data-remodal-options="closeOnEscape:false, closeOnOutsideClick:false">
